--- a/todo/src/components/Todo.css
+++ b/todo/src/components/Todo.css
@@ -1,20 +1,29 @@
-
-.li{
-    color: white;
-}
-
-[type="text"] {
-    background-color: white;
-    height: 40px;
-    border: none;
-    outline: none;
-    margin-top: 24px;
-    border-radius: 10px;
-}
-
-.lengthOfTodoList {
+.fa {
+    color:red;
+    cursor: pointer;
     display: flex;
-    flex-direction: column;
-    width: 80px;
+    margin: auto;
+    
 }
 
+.task_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 10px;
+    
+}
+
+p {
+    width: 350px;
+    font-size: 15px;
+    position: relative;
+    bottom: 10px;
+    font-weight: 350;
+    font-family: cursive;
+
+}
+
+.through {
+    text-decoration: line-through ;
+}
